[package]
name = "ssb-ref-neon"
version = "2.14.3"
authors = ["Anders Iver Gjermo <code@ai.gjermo.com>"]
license = "AGPL-3.0-or-later"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ssb_ref_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
ssb-multiformats = "0.4.0"
qstring = "0.7.2"
regex = "1.4.3"
urlencoding = "1.1.1"
